fix(styles): align text in chapter button to the left when multi-line

--- a/client/src/templates/Introduction/components/super-block-accordion.css
+++ b/client/src/templates/Introduction/components/super-block-accordion.css
@@ -35,6 +35,7 @@
 .super-block-accordion .chapter-button .chapter-button-left {
   display: flex;
   align-items: center;
+  text-align: left;
   column-gap: 10px;
   font-size: 1.5em;
 }
